# ChessEngineTest

./: .gitignore  .gitlab-ci.yml  ChessEngine.sln-ignore  ChessEngine.vcxproj-ignore  ChessEngine.vcxproj.filters  LICENSE  README.md  doxygen.cfg
Debug/ChessEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChessEngine.lastbuildstate
src/: CMakeLists.txt  CMakeLists.txt-Modified  CMakeLists.txt-Modified2  CMakePresets.json  bitboard.cpp  bitboard.h  button.cpp  button.h  cli.cpp  cli.h  console.cpp  console.h  coutsync.h  debug.cpp  debug.h  debugging.h  enginetools.cpp  enginetools.h  evaluation.cpp  evaluation.h  graphics.cpp  graphics.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  openGraphicsLicense.txt  option.cpp  option.h  position.cpp  position.h  search.cpp  search.h  thread.cpp  thread.h  thread_win32.h  transpositiontable.cpp  transpositiontable.h  types.cpp  (+8 more)
